# Tiff-Viewer

./: .gitignore  CMakeLists.txt  conanfile.txt  dialogs.cpp  dialogs.h  histogram_widget.cpp  histogram_widget.h  hyperspectral_image.cpp  hyperspectral_image.h  image_label.cpp  image_label.h  main.cpp  main_window.cpp  main_window.h  spectral_curve_dialog.cpp  spectral_curve_dialog.h  spectral_info_dialog.cpp  spectral_info_dialog.h  spectral_reader.cpp  spectral_reader.h  tiff_reader.cpp  tiff_reader.h
